--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
 set(CMAKE_BUILD_TYPE Debug)
 
-aux_source_directory(${PROJECT_SOURCE_DIR}/src SRCLIST)
+enable_testing()
 
-list(REMOVE_ITEM SRCLIST ${PROJECT_SOURCE_DIR}/src/fsm.cpp)
+add_subdirectory(test)
 
-add_executable(server main.cpp ${SRCLIST}) # 取出变量用大括号！！！
-
-target_link_libraries(server pthread)
+add_subdirectory(src)
